--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 配置站点
-title: 'Floyp 's Blog
+title: 'Floyp \'s Blog'
 description: 'In There,Just Do What U Want To Do , Welcome!'
 keyword: 'floy, 付小萍的独立博客, 数据分析、摄影、心理学...'
 url: 'https://floyp.github.io/' # your host
